dataset1235/2025-2/1379599236/users/2694152216/executions/2110095464_1396698442.log
== SUBMISSION (2025-08-31 18:16:31)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

d = ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
---- user output:
2.828
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
---- user output:
3.413
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
---- user output:
26.528
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 18:16:23)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

d = ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
---- user output:
2.828
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
---- user output:
3.413
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
---- user output:
26.528
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 18:16:24)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

d = ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
---- user output:
2.828
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
---- user output:
3.413
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
---- user output:
26.528
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 18:15:07)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

dAB = ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    d = round(d, 3)
              ^
NameError: name 'd' is not defined. Did you mean: 'id'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 18:15:59)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

d ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d ((xB-xA)**2 + (yB-yA)**2)**0.5
    ^
NameError: name 'd' is not defined. Did you mean: 'id'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 18:16:16)
-- CODE: 
xA = float(input())
yA = float(input())

xB = float(input())
yB = float(input())

d = ((xB-xA)**2 + (yB-yA)**2)**0.5

d = round(d, 3)

print(d)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.0
2.0
3.0
4.0
---- correct output:
2.828
---- user output:
2.828
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- TEST CASE 3:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 4:
---- input:
-1.3
5.0
-4.2
6.8
---- correct output:
3.413
---- user output:
3.413
-- TEST CASE 5:
---- input:
-11.2
6.7
10.4
-8.7
---- correct output:
26.528
---- user output:
26.528
-- TEST CASE 6:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
